--- a/debian/control
+++ b/debian/control
@@ -4,4 +4,5 @@ Architecture: all
 Section: misc
 Essential: no
 Priority: optional
+Maintainer: Faris Redza <faris.redza1999@gmail.com>
 Description: Changes kernel.printk parameters to suppress kernel messages on shutdown.
