--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,11 @@ jobs:
 
       - name: Build the package
         run: |
-          make deb_package
+          sudo apt install debmake debhelper
+          debmake -p quiet-shutdown -t
+          debuild -us -uc
 
       - name: Release the Package
         uses: softprops/action-gh-release@v1
         with:
-          files: quiet-shutdown_0.2-1_all.deb
+          files: ../quiet-shutdown*.deb
